--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,14 @@
   justify-content: center;
   align-items: center;
   padding: 50px;
+  position: relative;
 }
 
+
+@keyframes title-animation {
+  from {opacity: 0.1;}
+  to {opacity: 1;}
+}
 
 .mini-league-input:active:focus {
   outline: none;
@@ -15,4 +21,6 @@
 .mini-league-title {
   font-size: 2.5rem;
   color: #61892F;
+  animation-name: title-animation;
+  animation-duration: 1s;
 }
